--- a/css/home.css
+++ b/css/home.css
@@ -179,7 +179,7 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
-    .caixa, .principal, .conteudo-beneficios, .video{
+    .caixa, .principal, .conteudo-beneficios, .video, .mapa{
         width: auto;
     }
 
