--- a/css/home.css
+++ b/css/home.css
@@ -63,7 +63,7 @@ nav a:hover {
     font-weight:bold;
     text-align: center;
     font-size: 2em;
-    margin: 0 0 1em;
+    margin: 0 0 2em;
     color: var(--cor-escura);
     clear: left;
 
@@ -175,16 +175,19 @@ footer {
 
 }
 
-@media screen and (max-width: 480px) {
-    .caixa, .principal, .conteudo-beneficios, .video, .mapa, .mapa-conteudo{
+@media (max-width: 700px) {
+    .caixa,.utensilios, .principal, .conteudo-beneficios, .video, .mapa, .mapa-conteudo{
         width: auto;
     }
 
-    h1 {
+    h1,h3 {
         text-align: center;
     }
     nav {
         position: static;
+    }
+    .imagem-beneficios {
+        width: 100%;
     }
 
 }
